// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/molecules/AddToWishlistButton added 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  cursor: pointer;
}

.c1 svg {
  position: relative;
  top: 0.5rem;
  left: 0.4rem;
}

.c1:hover svg {
  top: 0.5rem;
  left: 0.4rem;
}

.c1:hover svg path {
  fill: #06847B;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  font-size: 0.875rem;
  width: 36px;
  height: 36px;
  border-radius: 50%;
  border-width: 0;
  background-color: #f1f5f5;
  margin-right: 0.5rem;
}

.c2 svg {
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c2"
    >
      <svg
        height={28}
        viewBox="0 0 32 32"
        width={28}
      >
        <path
          d="M8.03947 1.68919C7.18808 0.94893 6.07756 0.5 4.86029 0.5C2.1757 0.5 0 2.67621 0 5.3608C0 6.82241 0.647676 8.13003 1.66845 9.0205L8.55637 15.9087C8.67401 16.0263 8.83354 16.0924 8.99994 16.0924C9.16635 16.0924 9.32588 16.0263 9.44352 15.9087L16.3314 9.0205C17.3523 8.13003 18 6.82241 18 5.3608C18 2.67621 15.8237 0.5 13.1391 0.5C11.9218 0.5 10.8116 0.948911 9.96039 1.68915C9.58577 2.01492 9.26131 2.39711 8.99994 2.8223C8.73863 2.39713 8.41414 2.01495 8.03947 1.68919Z"
          fill="#323232"
        />
      </svg>
    </div>
    Remove from wishlist
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/molecules/AddToWishlistButton default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  cursor: pointer;
}

.c1 svg {
  position: relative;
  top: 0.8rem;
  left: 0.6rem;
}

.c1:hover svg {
  top: 0.5rem;
  left: 0.4rem;
}

.c1:hover svg path {
  fill: #06847B;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  font-size: 0.875rem;
  width: 36px;
  height: 36px;
  border-radius: 50%;
  border-width: 0;
  background-color: #f1f5f5;
  margin-right: 0.5rem;
}

.c2 svg {
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c2"
    >
      <svg
        height={38}
        viewBox="0 0 32 32"
        width={38}
      >
        <path
          d="M2.05597 5.8182L7.15994 10.8023L12.2639 5.81819L12.2898 5.79614C12.8859 5.28839 13.2533 4.55408 13.2533 3.74089C13.2533 2.24945 12.0084 1 10.4222 1C9.70694 1 9.05975 1.25663 8.56419 1.67743C8.34581 1.86287 8.15742 2.07981 8.00622 2.32L7.15989 3.66441L6.31363 2.31995C6.1625 2.07984 5.97414 1.86295 5.75574 1.67752C5.26005 1.25667 4.61258 1 3.89728 1C2.31127 1 1.06665 2.24928 1.06665 3.74089C1.06665 4.55411 1.43403 5.28842 2.03009 5.79615L2.05597 5.8182ZM6.81034 11.8586L1.38164 6.55741C0.577115 5.8721 0.0666504 4.86575 0.0666504 3.74089C0.0666504 1.67482 1.78142 0 3.89728 0C4.85667 0 5.73192 0.345498 6.40295 0.915207C6.43274 0.940499 6.46212 0.96623 6.49109 0.992395C6.74933 1.22559 6.97476 1.49305 7.15994 1.78725C7.34515 1.49304 7.57057 1.22557 7.82878 0.992367C7.85775 0.9662 7.88713 0.940466 7.91692 0.915172C8.58782 0.345484 9.46281 0 10.4222 0C12.5381 0 14.2533 1.67482 14.2533 3.74089C14.2533 4.86575 13.7428 5.8721 12.9382 6.55741L7.50954 11.8586C7.41683 11.9491 7.29109 12 7.15994 12C7.02879 12 6.90305 11.9491 6.81034 11.8586Z"
          fill="#323232"
        />
      </svg>
    </div>
    Add to wishlist
  </div>
  <div
    className="c3"
  />
</div>
`;
